# yaic

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  yaic-compose.service
blueprints/automation/yaic/: yaic_person_camera_to_mqtt_notify.yaml
tests/: test_ha_discovery.py  test_mqtt_client.py  test_processor.py  test_qwen_client.py
yaic/: config.py  ha_discovery.py  main.py  mqtt_client.py  processor.py  qwen_client.py
